cabal-version: 2.4
name: elm-codegen
version: 0.19.0

library
  build-depends:
      base
    , template-haskell
  exposed-modules:
    Language.Elm.Codegen
  ghc-options:
    -Wall
  hs-source-dirs:
    src

test-suite tests
  build-depends:
      base
    , elm-codegen
    , template-haskell
  default-language:
    Haskell2010
  ghc-options:
    -Wall
  hs-source-dirs:
    test
  main-is:
    Main.hs
  other-modules:
    Types
  type:
    exitcode-stdio-1.0
