Name: elm
Version: 0.19.0

Synopsis:
    The `elm` command line interface.

Description:
    This includes commands like `elm make`, `elm repl`, and many others
    for helping make Elm developers happy and productive.

Homepage: http://elm-lang.org

License: BSD3
License-file: LICENSE

Author:     Evan Czaplicki
Maintainer: info@elm-lang.org
Copyright:  Copyright (c) 2011-present, Evan Czaplicki

Category: Compiler, Language

Cabal-version: >=1.10
Build-type: Simple

source-repository head
    type:     git
    location: git://github.com/elm-lang/elm-compiler.git

Library
  build-depends:
    ansi-terminal >= 0.8 && < 0.9,
    ansi-wl-pprint >= 0.6.8 && < 0.7,
    base >=4.8 && <5,
    binary >= 0.8 && < 0.9,
    bytestring >= 0.9 && < 0.11,
    containers >= 0.5.8.2 && < 0.6,
    edit-distance >= 0.2 && < 0.3,
    filepath >= 1 && < 2.0,
    language-glsl >= 0.0.2 && < 0.3,
    mtl >= 2.2.1 && < 3,
    parsec,
    scientific,
    text >= 1 && < 2,
    unordered-containers,
    utf8-string,
    vector

  default-language:
    Haskell98

  exposed-modules:
    AST.Canonical
    AST.Module.Name
    AST.Optimized
    AST.Source
    AST.Utils.Binop
    AST.Utils.Shader
    AST.Utils.Type
    AST.Valid
    Canonicalize.Effects
    Canonicalize.Environment
    Canonicalize.Environment.Dups
    Canonicalize.Environment.Foreign
    Canonicalize.Environment.Local
    Canonicalize.Expression
    Canonicalize.Module
    Canonicalize.Pattern
    Canonicalize.Type
    Compile
    Data.Bag
    Data.Index
    Data.OneOrMore
    Elm.Compiler
    Elm.Compiler.Imports
    Elm.Compiler.Module
    Elm.Compiler.Objects
    Elm.Compiler.Type
    Elm.Compiler.Type.Extract
    Elm.Compiler.Version
    Elm.Docs
    Elm.Header
    Elm.Interface
    Elm.Kernel
    Elm.Name
    Elm.Package
    Generate.JavaScript
    Generate.JavaScript.Builder
    Generate.JavaScript.Expression
    Generate.JavaScript.Mode
    Generate.JavaScript.Name
    Json.Decode
    Json.Decode.Error
    Json.Decode.Internals
    Json.Encode
    Nitpick.PatternMatches
    Optimize.Case
    Optimize.DecisionTree
    Optimize.Expression
    Optimize.Module
    Optimize.Names
    Optimize.Port
    Parse.Declaration
    Parse.Expression
    Parse.Module
    Parse.Parse
    Parse.Pattern
    Parse.Primitives
    Parse.Primitives.Internals
    Parse.Primitives.Kernel
    Parse.Primitives.Keyword
    Parse.Primitives.Number
    Parse.Primitives.Shader
    Parse.Primitives.Symbol
    Parse.Primitives.Utf8
    Parse.Primitives.Variable
    Parse.Primitives.Whitespace
    Parse.Repl
    Parse.Shader
    Parse.Type
    Paths_elm
    Reporting.Annotation
    Reporting.Doc
    Reporting.Error
    Reporting.Error.Canonicalize
    Reporting.Error.Docs
    Reporting.Error.Main
    Reporting.Error.Pattern
    Reporting.Error.Syntax
    Reporting.Error.Type
    Reporting.Region
    Reporting.Render.Code
    Reporting.Render.Type
    Reporting.Render.Type.Localizer
    Reporting.Report
    Reporting.Result
    Reporting.Suggest
    Reporting.Warning
    Type.Constrain.Expression
    Type.Constrain.Module
    Type.Constrain.Pattern
    Type.Error
    Type.Instantiate
    Type.Occurs
    Type.Solve
    Type.Type
    Type.Unify
    Type.UnionFind
    Validate

  ghc-options:
    -Wall

  hs-source-dirs:
    src
